# fath-cuan

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
fath_cuan/: __init__.py  cli.py  workflow.py
fath_cuan/converters/: osv.py  vex.py
fath_cuan/io/: reader.py  writer.py
fath_cuan/models/: input.py  osv.py  vex.py
tests/: conftest.py  test_cli.py  test_io.py  test_workflow.py
tests/converters/: test_osv.py  test_vex.py
tests/models/: test_input.py
