[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fath-cuan"
version = "0.1.0"
description = "CLI tool to convert JSON into OSV and VEX files"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "tox>=4.0",
]

[project.scripts]
fath-cuan = "fath_cuan.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
strict = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
